# endpointo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parser_fuzz.rs
plugins/: README.md  dedup.py  regex_filter.py  sourcemap_extractor.py
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  scanner.rs  types.rs
src/cli/: cli_mod.rs  interactive.rs
src/crawler/: client.rs  mod.rs  rate_limiter.rs  robots.rs
src/parser/: filters.rs  js_parser.rs  mod.rs  patterns.rs  sourcemap.rs
src/plugins/: mod.rs
tests/: integration_test.rs
tests/fixtures/: samples.js
