[package]
name = "endpointo"
version = "0.1.0"
edition = "2021"
authors = ["Ismail Tasdelen <ismailtasdelen@gmail.com>"]
description = "High-performance API endpoint discovery tool for security professionals"
license = "MIT"
repository = "https://github.com/ismailtsdln/endpointo"
keywords = ["security", "api", "endpoint", "discovery", "recon"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "cookies"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
quick-xml = { version = "0.36", features = ["serialize"] }

# Regex and pattern matching
regex = "1.11"
lazy_static = "1.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Progress and UI
indicatif = "0.17"
console = "0.15"
colored = "2.1"

# URL parsing
url = "2.5"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Robots.txt parsing
robotstxt = "0.3"

# HTML templating for reports
askama = { version = "0.12", features = ["with-actix-web"] }

# Source map parsing
sourcemap = "9.0"

# Python FFI (optional)
pyo3 = { version = "0.22", features = ["auto-initialize"], optional = true }

# Encoding detection
encoding_rs = "0.8"

# Concurrent data structures
dashmap = "6.1"

[dev-dependencies]
tempfile = "3.13"
mockito = "1.5"
criterion = "0.5"

[features]
default = []
python-plugins = ["pyo3"]

[[bin]]
name = "endpointo"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[lib]
name = "endpointo"
path = "src/lib.rs"
